syntax = "proto3";

package order;

option go_package = "internal/proto;proto";

import "google/protobuf/timestamp.proto";

enum OrderStatus {
  PENDING = 0;
  COMPLETED = 1;
  CANCELLED = 2;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total_price = 4;
  OrderStatus status = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message OrderId {
  string id = 1;
}

message OrderList {
  repeated Order orders = 1;
}

message Empty {}

service OrderService {
  rpc CreateOrder(Order) returns (Order);
  rpc GetOrderByID(OrderId) returns (Order);
  rpc ListOrders(Empty) returns (OrderList);
  rpc UpdateOrder(Order) returns (Order);
  rpc DeleteOrder(OrderId) returns (Empty);
}
